kube/alrest/gitea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    xeiaso.net/thing: http
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      xeiaso.net/thing: http
  template:
    metadata:
      labels:
        xeiaso.net/thing: http
    spec:
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: techarohq-botstopper
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea
        # - name: internal-certs
        #   secret:
        #     secretName: gitea-internal-tls
        - name: custom
          configMap:
            name: gitea-custom
        - name: anubis
          configMap:
            name: anubis-cfg
        - name: botstopper-css
          configMap:
            name: botstopper-custom-css
      containers:
        - name: gitea
          image: gitea/gitea:1-rootless
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
            requests:
              cpu: "1"
              memory: "1Gi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
              subPath: data
            - name: data
              mountPath: /etc/gitea
              subPath: conf
            - name: custom
              mountPath: /var/lib/gitea/custom
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
        # - name: relayd
        #   image: ghcr.io/xe/x/relayd:latest
        #   imagePullPolicy: "Always"
        #   resources:
        #     limits:
        #       cpu: "500m"
        #       memory: "512Mi"
        #     requests:
        #       cpu: "100m"
        #       memory: "256Mi"
        #   securityContext:
        #     runAsUser: 1000
        #     runAsGroup: 1000
        #     runAsNonRoot: true
        #     allowPrivilegeEscalation: false
        #     capabilities:
        #       drop:
        #         - ALL
        #     seccompProfile:
        #       type: RuntimeDefault
        #   env:
        #     - name: BIND
        #       value: ":8443"
        #     - name: PROXY_TO
        #       value: "http://localhost:3000"
        #   volumeMounts:
        #     - name: "internal-certs"
        #       mountPath: "/xe/pki"
        #       readOnly: true
        - name: anubis
          image: ghcr.io/techarohq/anubis:latest
          #image: registry.int.xeserv.us/techaro/botstopper/anubis:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: anubis
              mountPath: /xe/cfg/anubis
            - name: botstopper-css
              mountPath: /xe/cfg/botstopper/static/css
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 128Mi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
