kube/alrest/gitea/runner.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: act-runner
  name: act-runner
  annotations:
    keel.sh/policy: all
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: act-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: act-runner
    spec:
      restartPolicy: Always
      volumes:
        - name: docker-certs
          emptyDir: {}
        - name: runner-data
          emptyDir: {}
        - name: docker-daemon-config
          configMap:
            name: docker-daemon-config
        - name: gitea-runner-cfg
          configMap:
            name: gitea-runner-cfg
      containers:
        - name: runner
          image: gitea/act_runner:nightly-dind
          imagePullPolicy: Always
          securityContext:
            privileged: true
            runAsUser: 0
          volumeMounts:
            - name: runner-data
              mountPath: /data
              subPath: "actions"
            - name: docker-daemon-config
              mountPath: "/etc/docker"
            - name: gitea-runner-cfg
              mountPath: "/etc/gitea-runner"
