kube/alrest/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
spec:
  selector:
    xeiaso.net/thing: http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 22
      targetPort: 2222
      name: ssh
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
    - name: anubis
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
