kube/alrest/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  labels:
    name: gitea
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048g
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - git.xeserv.us
      secretName: gitea-internal-tls
  rules:
    - host: git.xeserv.us
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: git
                port:
                  name: anubis
